# waste-classifier-api

./: .env.example  .gitignore  Makefile  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ai_recognition_service/: main.py
api/: utils.py
api/authentication/: adapters.py  models.py  serializers.py  urls.py  views.py
api/authentication/migrations/: 0001_initial.py
api/config/: settings.py  urls.py
api/user/: adapters.py  models.py  urls.py  views.py
api/waste_item/: adapters.py  apps.py  models.py  urls.py  views.py
api/waste_item/migrations/: 0001_initial.py
core/app/user/application/: exceptions.py
core/app/user/application/use_cases/: change_password.py  delete_user.py  dto.py  get_self_user.py  signup.py  update_user.py
core/app/user/domain/: dtos.py  entities.py  ports.py
core/app/waste-item/domain/: entities.py
core/app/waste_item/application/: dto.py  exceptions.py
core/app/waste_item/application/use_cases/: __init__.py  create_waste_item.py  get_all_recycling_material.py  get_excel_user_id.py  get_frequency_recycling.py  (+5 more)
core/app/waste_item/domain/: entities.py  ports.py
core/tests/user/use_cases/: test_change_password.py  test_delete_user.py  test_get_self_user.py  test_signup_user.py  test_update_user.py
core/tests/waste-item/use_cases/: get_one_item_by_id.py  test_create_waste_item.py  test_get_all_recycling_material.py  test_get_excel_user_id.py  test_get_items_by_userId.py  test_get_objets_recycling_material.py  test_list_all_items.py  test_scan_waste_item.py
