[project]
name = "waste-classifier-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Joao Castillo"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "python-dotenv[cli] (>=1.0.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "coverage (>=7.6.12,<8.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "djangorestframework-simplejwt (>=5.4.0,<6.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
