[project]
name = "core"
version = "0.1.0"
description = ""
authors = [
    {name = "Joao Castillo"}
]
readme = "README.md"


requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "python-dotenv[cli] (>=1.0.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "coverage (>=7.6.12,<8.0.0)",
    "pydantic[email] (>=2.11.5,<3.0.0)",
    "djangorestframework-simplejwt (>=5.4.0,<6.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "boto3 (>=1.36.26,<2.0.0)",
    "awscli (>=1.37.26,<2.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "openai (>=1.82.0,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "dj-database-url (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
